-fixed tree balancing

--- a/RBTreeMap/RBTreeMap.vcxproj
+++ b/RBTreeMap/RBTreeMap.vcxproj
@@ -150,6 +150,9 @@
     <ClInclude Include="Stack.h" />
     <ClInclude Include="TreePrinter.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".editorconfig" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
