--- a/RBTreeMap/RBTreeMap.vcxproj.filters
+++ b/RBTreeMap/RBTreeMap.vcxproj.filters
@@ -48,4 +48,7 @@
       <Filter>Исходные файлы\Collections</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".editorconfig" />
+  </ItemGroup>
 </Project>
